--- a/experiments/model_optimizer/notebooks/list_results_files.ipynb
+++ b/experiments/model_optimizer/notebooks/list_results_files.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 285,
+   "execution_count": 2543,
    "id": "81ad327b-bd53-4f26-aa28-eed08b9e2e9d",
    "metadata": {},
    "outputs": [
@@ -10,63 +10,27 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "S16_C16_N1000:\n",
-      "  asha_syne_tune: '25x; 25x; '\n",
-      "  bayesian_open_box: '25x; '\n",
-      "  hyperband_syne_tune: '25x; 25x; '\n",
-      "  random_search_syne_tune: '25x; 25x; 25x; '\n",
       "S16_C4_N1000:\n",
-      "  asha_syne_tune: '25x; 25x; '\n",
-      "  bayesian_open_box: '25x; 6x; '\n",
-      "  hyperband_syne_tune: '25x; 25x; '\n",
-      "  random_search_syne_tune: '25x; 25x; 25x; '\n",
-      "S16_C8_N1000:\n",
-      "  asha_syne_tune: '25x; 25x; '\n",
-      "  bayesian_open_box: '25x; '\n",
-      "  hyperband_syne_tune: '25x; 25x; '\n",
-      "  random_search_syne_tune: '25x; 25x; 25x; '\n",
+      "  cost_model_xgb_rs_exc_cluster_update_only_hist_v18: '25x; 25x; 25x; '\n",
       "S2_C2_N50:\n",
-      "  asha_syne_tune: '25x; 20x; '\n",
-      "  bayesian_open_box: '25x; 7x; '\n",
-      "  hyperband_syne_tune: '25x; 25x; '\n",
-      "  random_search_syne_tune: '25x; 25x; 25x; '\n",
+      "  cost_model_xgb_rs_exc_cluster_update_only_hist_v18: '15x; 16x; 15x; '\n",
       "S2_C8_N50:\n",
-      "  asha_syne_tune: '25x; 19x; '\n",
-      "  bayesian_open_box: '25x; 6x; '\n",
-      "  hyperband_syne_tune: '25x; 25x; '\n",
-      "  random_search_syne_tune: '25x; 25x; 25x; '\n",
+      "  cost_model_xgb_rs_exc_cluster_update_only_hist_v18: '19x; 20x; 20x; '\n",
       "S4_C16_N50:\n",
-      "  asha_syne_tune: '25x; 25x; '\n",
-      "  bayesian_open_box: '25x; 7x; '\n",
-      "  hyperband_syne_tune: '25x; 25x; '\n",
-      "  random_search_syne_tune: '25x; 25x; 25x; '\n",
-      "S8_C16_N150:\n",
-      "  asha_syne_tune: '25x; 25x; '\n",
-      "  bayesian_open_box: '25x; 8x; '\n",
-      "  hyperband_syne_tune: '25x; 25x; '\n",
-      "  random_search_syne_tune: '25x; 25x; 25x; '\n",
+      "  cost_model_xgb_rs_exc_cluster_update_only_hist_v18: '25x; 21x; 25x; '\n",
       "S8_C2_N150:\n",
-      "  asha_syne_tune: '25x; 25x; '\n",
-      "  bayesian_open_box: '25x; 8x; '\n",
-      "  hyperband_syne_tune: '25x; 25x; '\n",
-      "  random_search_syne_tune: '25x; 25x; 25x; '\n",
+      "  cost_model_xgb_rs_exc_cluster_update_only_hist_v18: '16x; 19x; 18x; '\n",
       "S8_C8_N150:\n",
-      "  asha_syne_tune: '25x; 25x; '\n",
-      "  bayesian_open_box: '25x; 17x; '\n",
-      "  hyperband_syne_tune: '25x; 25x; '\n",
-      "  random_search_syne_tune: '25x; 25x; 25x; '\n",
+      "  cost_model_xgb_rs_exc_cluster_update_only_hist_v18: '10x; 8x; 7x; '\n",
       "\n",
-      "S16_C16_N1000: 200\n",
-      "S16_C4_N1000: 206\n",
-      "S16_C8_N1000: 200\n",
-      "S2_C2_N50: 202\n",
-      "S2_C8_N50: 200\n",
-      "S4_C16_N50: 207\n",
-      "S8_C16_N150: 208\n",
-      "S8_C2_N150: 208\n",
-      "S8_C8_N150: 217\n",
+      "S16_C4_N1000: 75\n",
+      "S2_C2_N50: 46\n",
+      "S2_C8_N50: 59\n",
+      "S4_C16_N50: 71\n",
+      "S8_C2_N150: 53\n",
+      "S8_C8_N150: 25\n",
       "\n",
-      "Total Transfer Count : 1848\n"
+      "Total Transfer Count : 329\n"
      ]
     }
    ],
@@ -76,36 +40,14 @@
     "import yaml\n",
     "\n",
     "\n",
-    "all_files = glob.glob('C:/Users/bened/Desktop/Uni/repos/xdbc-client/experiments/model_optimizer/results_10_5M_flex/*/*/*.csv')\n",
-    "#all_files = glob.glob('C:/Users/bened/Desktop/Uni/repos/xdbc-client/experiments/model_optimizer/results_1310k/*/cost*/*.csv')\n",
+    "all_files = glob.glob('C:/Users/bened/Desktop/Uni/repos/xdbc-client/experiments/model_optimizer/results_10_5M_semi_flex/*/*v18*/*.csv')\n",
+    "#all_files = glob.glob('C:/Users/bened/Desktop/Uni/repos/xdbc-client/experiments/model_optimizer/results_1310k/*/*/*.csv')\n",
     "\n",
     "algos_to_view = [\n",
-    "        #\"cost_model_rfs_rs_exc_cluster_update_net_trans\",\n",
-    "        #\"cost_model_rfs_rs_exc_cluster_update_only_hist\",\n",
-    "\n",
-    "        #\"cost_model_rfs_bay_exc_cluster_update_net_trans\",\n",
-    "        #\"cost_model_rfs_bay_exc_cluster_update_only_hist\",\n",
-    "    \n",
-    "        #\"cost_model_rfs_rs_exc_cluster_update_net_trans_currated_data\",\n",
-    "        #\"cost_model_rfs_rs_exc_cluster_update_only_hist_currated_data\",\n",
-    "    \n",
-    "\n",
-    "        #\"cost_model_gdb_rs_exc_cluster_update_net_trans\",\n",
-    "        #\"cost_model_gdb_rs_exc_cluster_update_only_hist\",\n",
-    "\n",
+    "        #\"cost_model_xgb_rs_exc_cluster_net_trans\",\n",
     "        #\"cost_model_xgb_rs_exc_cluster_update_net_trans\",\n",
     "        #\"cost_model_xgb_rs_exc_cluster_update_only_hist\",\n",
     "\n",
-    "        #\"cost_model_xgb_rs_exc_cluster_update_net_trans_tuned\",\n",
-    "        #\"cost_model_xgb_rs_exc_cluster_update_only_hist_tuned\",\n",
-    "\n",
-    "        #\"cost_model_xgb_rs_exc_cluster_update_net_trans_tuned_1000_curdat\",\n",
-    "        #\"cost_model_xgb_rs_exc_cluster_update_only_hist_tuned_1000_curdat\",\n",
-    "\n",
-    "    \n",
-    "        #\"cost_model_xgb_rs_exc_cluster_update_net_trans_tuned_1000_curdat_more_clusters\",\n",
-    "        #\"cost_model_xgb_rs_exc_cluster_update_only_hist_tuned_1000_curdat_more_clusters\",\n",
-    "        \n",
     "        #\"tlbo_rgpe_prf\",\n",
     "        #\"tlbo_topov3_prf\",\n",
     "        #\"quantile\",\n",
@@ -123,6 +65,7 @@
     "dict_count_per_env = dict();\n",
     "\n",
     "for file in all_files:\n",
+    "    #print(file)\n",
     "    df = pd.read_csv(file)\n",
     "\n",
     "    env = file.split(\"\\\\\")[-3]\n",
@@ -134,67 +77,68 @@
     "\n",
     "    #if not any(a in algo for a in algos_to_view):\n",
     "    #    continue\n",
-    "    #if \"_hist_ratio\" in algo:\n",
-    "    #    continue\n",
     "\n",
-    "    if 'update' in algo:\n",
-    "        continue\n",
-    "\n",
-    "    \n",
     "    total_count = total_count + count\n",
     "    \n",
     "    if env not in dict_overview.keys() :\n",
     "        dict_overview[env] = dict()\n",
     "    if algo not in dict_overview[env].keys(): \n",
     "        dict_overview[env][algo] = \"\"\n",
-    "\n",
+    "    \n",
     "    if env not in dict_count_per_env.keys():  \n",
+    "        \n",
     "        dict_count_per_env[env] = 0\n",
     "    \n",
     "    dict_overview[env][algo] = dict_overview[env][algo] + \"\" + str(count)+\"x; \"\n",
     "    dict_count_per_env[env] = dict_count_per_env[env] + count\n",
     "\n",
     "print(yaml.dump(dict_overview))\n",
+    "\n",
     "print(yaml.dump(dict_count_per_env))\n",
     "print(\"Total Transfer Count : \"+str(total_count))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 2397,
    "id": "bd1d8ec2-8a88-4554-953a-2febdd41ecaa",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "S16_C16_N1000_random_samples : 8\n",
-      "S16_C16_N150_random_samples : 8\n",
-      "S16_C16_N50_random_samples : 8\n",
-      "S16_C4_N150_random_samples : 8\n",
-      "S16_C4_N50_random_samples : 8\n",
-      "S16_C8_N150_random_samples : 8\n",
-      "S16_C8_N50_random_samples : 8\n",
-      "S2_C2_N1000_random_samples : 8\n",
-      "S2_C2_N150_random_samples : 8\n",
-      "S2_C2_N50_random_samples : 23\n",
-      "S2_C8_N1000_random_samples : 8\n",
-      "S2_C8_N150_random_samples : 8\n",
-      "S2_C8_N50_random_samples : 20\n",
-      "S4_C16_N1000_random_samples : 8\n",
-      "S4_C16_N150_random_samples : 8\n",
-      "S4_C16_N50_random_samples : 16\n",
-      "S8_C16_N150_random_samples : 8\n",
-      "S8_C16_N50_random_samples : 8\n",
-      "S8_C2_N1000_random_samples : 4\n",
-      "S8_C2_N150_random_samples : 8\n",
-      "S8_C2_N50_random_samples : 8\n",
-      "S8_C8_N1000_random_samples : 8\n",
-      "S8_C8_N150_random_samples : 8\n",
-      "S8_C8_N50_random_samples : 8\n",
+      "S16_C16_N1000_random_samples : 450\n",
+      "S16_C16_N150_random_samples : 450\n",
+      "S16_C16_N50_random_samples : 450\n",
+      "S16_C4_N1000_random_samples : 450\n",
+      "S16_C4_N150_random_samples : 450\n",
+      "S16_C4_N50_random_samples : 450\n",
+      "S16_C8_N1000_random_samples : 450\n",
+      "S16_C8_N150_random_samples : 450\n",
+      "S16_C8_N50_random_samples : 450\n",
+      "S2_C2_N1000_random_samples : 450\n",
+      "S2_C2_N150_random_samples : 450\n",
+      "S2_C2_N50_random_samples : 450\n",
+      "S2_C8_N1000_random_samples : 450\n",
+      "S2_C8_N150_random_samples : 450\n",
+      "S2_C8_N50_random_samples : 450\n",
+      "S4_C16_N1000_random_samples : 450\n",
+      "S4_C16_N150_random_samples : 450\n",
+      "S4_C16_N50_random_samples : 450\n",
+      "S8_C16_N1000_random_samples : 450\n",
+      "S8_C16_N150_random_samples : 450\n",
+      "S8_C16_N50_random_samples : 450\n",
+      "S8_C2_N1000_random_samples : 450\n",
+      "S8_C2_N150_random_samples : 450\n",
+      "S8_C2_N50_random_samples : 450\n",
+      "S8_C8_N1000_random_samples : 450\n",
+      "S8_C8_N150_random_samples : 450\n",
+      "S8_C8_N50_random_samples : 450\n",
       "\n",
-      "Total Random Sample Count : 223\n"
+      "Total Random Sample Count : 12150\n"
      ]
     }
    ],
@@ -202,105 +146,32 @@
     "import pandas as pd\n",
     "import glob\n",
     "import yaml\n",
-    "\n",
-    "#all_files = glob.glob('C:/Users/bened/Desktop/Uni/repos/xdbc-client/experiments/model_optimizer/random_samples_1310k/S*.csv')\n",
-    "\n",
     "all_files = glob.glob('C:/Users/bened/Desktop/Uni/repos/xdbc-client/experiments/model_optimizer/random_samples_10_5M/S*.csv')\n",
-    "\n",
     "total_count = 0\n",
-    "\n",
     "for file in all_files:\n",
-    "    df = pd.read_csv(file)\n",
-    "\n",
-    "   \n",
+    "    df = pd.read_csv(file)   \n",
     "    count = len(df[df['time'].notna()])\n",
-    "    #count = len(df['time'])\n",
-    "    \n",
+    "    #count = len(df[df['transfer_id']>0])\n",
     "    total_count = total_count + count\n",
-    "\n",
     "    print(f\"{file.split('\\\\')[-1].split(\".\")[0]} : {count}\")\n",
-    "\n",
-    "print(\"\\nTotal Random Sample Count : \"+str(total_count))#start 8:55"
+    "print(\"\\nTotal Random Sample Count : \"+str(total_count))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 281,
+   "execution_count": null,
    "id": "0971ae98-a21c-45cf-a21e-80bf6069b887",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "results_cost_model_rfs_rs_exc_cluster_update_hist_ratio_2025-01-28_01-08-58 : 6\n",
-      "C:/Users/bened/Desktop/Uni/repos/xdbc-client/experiments/model_optimizer/results_1310k\\S16_C16_N150\\cost_model_rfs_rs_exc_cluster_update_hist_ratio\\results_cost_model_rfs_rs_exc_cluster_update_hist_ratio_2025-01-28_01-08-58.csv\n",
-      "\n",
-      "\n",
-      "results_cost_model_rfs_rs_exc_cluster_update_2025-01-28_12-18-52 : 6\n",
-      "C:/Users/bened/Desktop/Uni/repos/xdbc-client/experiments/model_optimizer/results_1310k\\S8_C2_N1000\\cost_model_rfs_rs_exc_cluster_update\\results_cost_model_rfs_rs_exc_cluster_update_2025-01-28_12-18-52.csv\n",
-      "\n",
-      "\n",
-      "results_cost_model_rfs_rs_exc_cluster_update_net_trans_hist_ratio_2025-01-28_22-10-06 : 6\n",
-      "C:/Users/bened/Desktop/Uni/repos/xdbc-client/experiments/model_optimizer/results_1310k\\S8_C2_N1000\\cost_model_rfs_rs_exc_cluster_update_net_trans_hist_ratio\\results_cost_model_rfs_rs_exc_cluster_update_net_trans_hist_ratio_2025-01-28_22-10-06.csv\n",
-      "\n",
-      "\n",
-      "results_cost_model_rfs_rs_exc_update_hist_ratio_2025-01-28_15-54-50 : 6\n",
-      "C:/Users/bened/Desktop/Uni/repos/xdbc-client/experiments/model_optimizer/results_1310k\\S8_C2_N1000\\cost_model_rfs_rs_exc_update_hist_ratio\\results_cost_model_rfs_rs_exc_update_hist_ratio_2025-01-28_15-54-50.csv\n",
-      "\n",
-      "\n",
-      "results_cost_model_rfs_rs_exc_update_net_trans_hist_ratio_2025-01-28_04-10-09 : 7\n",
-      "C:/Users/bened/Desktop/Uni/repos/xdbc-client/experiments/model_optimizer/results_1310k\\S8_C2_N1000\\cost_model_rfs_rs_exc_update_net_trans_hist_ratio\\results_cost_model_rfs_rs_exc_update_net_trans_hist_ratio_2025-01-28_04-10-09.csv\n",
-      "\n",
-      "\n",
-      "results_cost_model_rfs_rs_exc_update_only_hist_2025-01-28_19-41-10 : 10\n",
-      "C:/Users/bened/Desktop/Uni/repos/xdbc-client/experiments/model_optimizer/results_1310k\\S8_C2_N1000\\cost_model_rfs_rs_exc_update_only_hist\\results_cost_model_rfs_rs_exc_update_only_hist_2025-01-28_19-41-10.csv\n",
-      "\n",
-      "\n",
-      "results_cost_model_rfs_rs_exc_w_updatehist_w_ratio_sqr_err_2025-01-23_15-47-06 : 6\n",
-      "C:/Users/bened/Desktop/Uni/repos/xdbc-client/experiments/model_optimizer/results_1310k\\S8_C2_N1000\\cost_model_rfs_rs_exc_w_updatehist_w_ratio_sqr_err\\results_cost_model_rfs_rs_exc_w_updatehist_w_ratio_sqr_err_2025-01-23_15-47-06.csv\n",
-      "\n",
-      "\n",
-      "results_cost_model_rfs_rs_exc_w_updatehist_w_ratio_sqr_err_2025-01-23_19-12-28 : 7\n",
-      "C:/Users/bened/Desktop/Uni/repos/xdbc-client/experiments/model_optimizer/results_1310k\\S8_C2_N1000\\cost_model_rfs_rs_exc_w_updatehist_w_ratio_sqr_err\\results_cost_model_rfs_rs_exc_w_updatehist_w_ratio_sqr_err_2025-01-23_19-12-28.csv\n",
-      "\n",
-      "\n",
-      "results_cost_model_rfs_rs_exc_w_updatehist_w_ratio_sqr_err_net_trans_2025-01-24_13-35-41 : 7\n",
-      "C:/Users/bened/Desktop/Uni/repos/xdbc-client/experiments/model_optimizer/results_1310k\\S8_C2_N1000\\cost_model_rfs_rs_exc_w_updatehist_w_ratio_sqr_err_net_trans\\results_cost_model_rfs_rs_exc_w_updatehist_w_ratio_sqr_err_net_trans_2025-01-24_13-35-41.csv\n",
-      "\n",
-      "\n",
-      "results_cost_model_rfs_rs_exc_w_updatehist_w_ratio_sqr_err_net_trans_2025-01-24_20-03-39 : 6\n",
-      "C:/Users/bened/Desktop/Uni/repos/xdbc-client/experiments/model_optimizer/results_1310k\\S8_C2_N1000\\cost_model_rfs_rs_exc_w_updatehist_w_ratio_sqr_err_net_trans\\results_cost_model_rfs_rs_exc_w_updatehist_w_ratio_sqr_err_net_trans_2025-01-24_20-03-39.csv\n",
-      "\n",
-      "\n",
-      "results_cost_model_rfs_rs_exc_w_update_clusterhist_w_ratio_sqr_err_net_trans_2025-01-24_15-06-47 : 6\n",
-      "C:/Users/bened/Desktop/Uni/repos/xdbc-client/experiments/model_optimizer/results_1310k\\S8_C2_N1000\\cost_model_rfs_rs_exc_w_update_clusterhist_w_ratio_sqr_err_net_trans\\results_cost_model_rfs_rs_exc_w_update_clusterhist_w_ratio_sqr_err_net_trans_2025-01-24_15-06-47.csv\n",
-      "\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import glob\n",
     "import yaml\n",
-    "\n",
-    "\n",
-    "# get all files where there are more than 4 timeouts\n",
-    "\n",
-    "\n",
-    "\n",
     "all_files = glob.glob('C:/Users/bened/Desktop/Uni/repos/xdbc-client/experiments/model_optimizer/results_1310k/*/*/*.csv')\n",
-    "#all_files = glob.glob('C:/Users/bened/Desktop/Uni/repos/xdbc-client/experiments/model_optimizer/results_1310k/*/*/*.csv')\n",
-    "#all_files = glob.glob('C:/Users/bened/Desktop/Uni/repos/xdbc-client/experiments/model_optimizer/results_175k/*/*/*.csv')\n",
-    "\n",
     "total_count = 0\n",
-    "\n",
     "for file in all_files:\n",
     "    df = pd.read_csv(file)\n",
-    "\n",
     "    count_all = len(df['time'])\n",
-    "    \n",
     "    df = df[df['transfer_id'] > 0]    \n",
     "    \n",
     "    count = len(df[df['time'].notna()])\n",
@@ -313,14 +184,6 @@
     "        print(\"\\n\")\n",
     "\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2eb15c65-e080-4619-8919-04bdc9e4f3be",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
