--- a/experiments/model_optimizer/notebooks/list_results_files.ipynb
+++ b/experiments/model_optimizer/notebooks/list_results_files.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2543,
+   "execution_count": 1734,
    "id": "81ad327b-bd53-4f26-aa28-eed08b9e2e9d",
    "metadata": {},
    "outputs": [
@@ -10,27 +10,36 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "S16_C16_N1000:\n",
+      "  cost_model_xgb_rs_exc_cluster_update_only_hist_v26: '2x; '\n",
       "S16_C4_N1000:\n",
-      "  cost_model_xgb_rs_exc_cluster_update_only_hist_v18: '25x; 25x; 25x; '\n",
+      "  cost_model_xgb_rs_exc_cluster_update_only_hist_v26: '21x; 20x; 20x; '\n",
+      "S16_C8_N1000:\n",
+      "  cost_model_xgb_rs_exc_cluster_update_only_hist_v26: '2x; 2x; 2x; '\n",
       "S2_C2_N50:\n",
-      "  cost_model_xgb_rs_exc_cluster_update_only_hist_v18: '15x; 16x; 15x; '\n",
+      "  cost_model_xgb_rs_exc_cluster_update_only_hist_v26: '13x; 13x; 12x; '\n",
       "S2_C8_N50:\n",
-      "  cost_model_xgb_rs_exc_cluster_update_only_hist_v18: '19x; 20x; 20x; '\n",
+      "  cost_model_xgb_rs_exc_cluster_update_only_hist_v26: '12x; 13x; 11x; '\n",
       "S4_C16_N50:\n",
-      "  cost_model_xgb_rs_exc_cluster_update_only_hist_v18: '25x; 21x; 25x; '\n",
+      "  cost_model_xgb_rs_exc_cluster_update_only_hist_v26: '18x; 18x; 16x; '\n",
+      "S8_C16_N150:\n",
+      "  cost_model_xgb_rs_exc_cluster_update_only_hist_v26: '25x; 25x; 2x; '\n",
       "S8_C2_N150:\n",
-      "  cost_model_xgb_rs_exc_cluster_update_only_hist_v18: '16x; 19x; 18x; '\n",
+      "  cost_model_xgb_rs_exc_cluster_update_only_hist_v26: '14x; 13x; 13x; '\n",
       "S8_C8_N150:\n",
-      "  cost_model_xgb_rs_exc_cluster_update_only_hist_v18: '10x; 8x; 7x; '\n",
+      "  cost_model_xgb_rs_exc_cluster_update_only_hist_v26: '25x; 25x; 25x; '\n",
       "\n",
-      "S16_C4_N1000: 75\n",
-      "S2_C2_N50: 46\n",
-      "S2_C8_N50: 59\n",
-      "S4_C16_N50: 71\n",
-      "S8_C2_N150: 53\n",
-      "S8_C8_N150: 25\n",
+      "S16_C16_N1000: 2\n",
+      "S16_C4_N1000: 61\n",
+      "S16_C8_N1000: 6\n",
+      "S2_C2_N50: 38\n",
+      "S2_C8_N50: 36\n",
+      "S4_C16_N50: 52\n",
+      "S8_C16_N150: 52\n",
+      "S8_C2_N150: 40\n",
+      "S8_C8_N150: 75\n",
       "\n",
-      "Total Transfer Count : 329\n"
+      "Total Transfer Count : 362\n"
      ]
     }
    ],
@@ -40,14 +49,15 @@
     "import yaml\n",
     "\n",
     "\n",
-    "all_files = glob.glob('C:/Users/bened/Desktop/Uni/repos/xdbc-client/experiments/model_optimizer/results_10_5M_semi_flex/*/*v18*/*.csv')\n",
-    "#all_files = glob.glob('C:/Users/bened/Desktop/Uni/repos/xdbc-client/experiments/model_optimizer/results_1310k/*/*/*.csv')\n",
+    "all_files = glob.glob('C:/Users/bened/Desktop/Uni/repos/xdbc-client/experiments/model_optimizer/results_10_5M_semi_flex/*/*v26*/*.csv')\n",
+    "\n",
     "\n",
     "algos_to_view = [\n",
     "        #\"cost_model_xgb_rs_exc_cluster_net_trans\",\n",
     "        #\"cost_model_xgb_rs_exc_cluster_update_net_trans\",\n",
     "        #\"cost_model_xgb_rs_exc_cluster_update_only_hist\",\n",
     "\n",
+    "    \n",
     "        #\"tlbo_rgpe_prf\",\n",
     "        #\"tlbo_topov3_prf\",\n",
     "        #\"quantile\",\n",
@@ -72,12 +82,10 @@
     "    algo = file.split(\"\\\\\")[-2]\n",
     "    count = len(df[df['transfer_id'] > 0])\n",
     "\n",
-    "    #if algo not in algos_to_view:\n",
-    "    #    continue\n",
-    "\n",
     "    #if not any(a in algo for a in algos_to_view):\n",
     "    #    continue\n",
     "\n",
+    "    \n",
     "    total_count = total_count + count\n",
     "    \n",
     "    if env not in dict_overview.keys() :\n",
@@ -85,9 +93,8 @@
     "    if algo not in dict_overview[env].keys(): \n",
     "        dict_overview[env][algo] = \"\"\n",
     "    \n",
-    "    if env not in dict_count_per_env.keys():  \n",
-    "        \n",
-    "        dict_count_per_env[env] = 0\n",
+    "    if env not in dict_count_per_env.keys():\n",
+    "        dict_count_per_env[env] = 0   \n",
     "    \n",
     "    dict_overview[env][algo] = dict_overview[env][algo] + \"\" + str(count)+\"x; \"\n",
     "    dict_count_per_env[env] = dict_count_per_env[env] + count\n",
@@ -95,50 +102,49 @@
     "print(yaml.dump(dict_overview))\n",
     "\n",
     "print(yaml.dump(dict_count_per_env))\n",
+    "\n",
     "print(\"Total Transfer Count : \"+str(total_count))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2397,
+   "execution_count": 1200,
    "id": "bd1d8ec2-8a88-4554-953a-2febdd41ecaa",
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "S16_C16_N1000_random_samples : 450\n",
-      "S16_C16_N150_random_samples : 450\n",
-      "S16_C16_N50_random_samples : 450\n",
-      "S16_C4_N1000_random_samples : 450\n",
-      "S16_C4_N150_random_samples : 450\n",
-      "S16_C4_N50_random_samples : 450\n",
-      "S16_C8_N1000_random_samples : 450\n",
-      "S16_C8_N150_random_samples : 450\n",
-      "S16_C8_N50_random_samples : 450\n",
-      "S2_C2_N1000_random_samples : 450\n",
-      "S2_C2_N150_random_samples : 450\n",
-      "S2_C2_N50_random_samples : 450\n",
-      "S2_C8_N1000_random_samples : 450\n",
-      "S2_C8_N150_random_samples : 450\n",
-      "S2_C8_N50_random_samples : 450\n",
-      "S4_C16_N1000_random_samples : 450\n",
-      "S4_C16_N150_random_samples : 450\n",
-      "S4_C16_N50_random_samples : 450\n",
-      "S8_C16_N1000_random_samples : 450\n",
-      "S8_C16_N150_random_samples : 450\n",
-      "S8_C16_N50_random_samples : 450\n",
-      "S8_C2_N1000_random_samples : 450\n",
-      "S8_C2_N150_random_samples : 450\n",
-      "S8_C2_N50_random_samples : 450\n",
-      "S8_C8_N1000_random_samples : 450\n",
-      "S8_C8_N150_random_samples : 450\n",
-      "S8_C8_N50_random_samples : 450\n",
+      "S16_C16_N1000_random_samples : 600\n",
+      "S16_C16_N150_random_samples : 700\n",
+      "S16_C16_N50_random_samples : 700\n",
+      "S16_C4_N1000_random_samples : 600\n",
+      "S16_C4_N150_random_samples : 700\n",
+      "S16_C4_N50_random_samples : 700\n",
+      "S16_C8_N1000_random_samples : 600\n",
+      "S16_C8_N150_random_samples : 700\n",
+      "S16_C8_N50_random_samples : 700\n",
+      "S2_C2_N1000_random_samples : 700\n",
+      "S2_C2_N150_random_samples : 700\n",
+      "S2_C2_N50_random_samples : 700\n",
+      "S2_C8_N1000_random_samples : 699\n",
+      "S2_C8_N150_random_samples : 700\n",
+      "S2_C8_N50_random_samples : 700\n",
+      "S4_C16_N1000_random_samples : 700\n",
+      "S4_C16_N150_random_samples : 700\n",
+      "S4_C16_N50_random_samples : 700\n",
+      "S8_C16_N1000_random_samples : 600\n",
+      "S8_C16_N150_random_samples : 700\n",
+      "S8_C16_N50_random_samples : 700\n",
+      "S8_C2_N1000_random_samples : 615\n",
+      "S8_C2_N150_random_samples : 700\n",
+      "S8_C2_N50_random_samples : 700\n",
+      "S8_C8_N1000_random_samples : 700\n",
+      "S8_C8_N150_random_samples : 700\n",
+      "S8_C8_N50_random_samples : 700\n",
       "\n",
-      "Total Random Sample Count : 12150\n"
+      "Total Random Sample Count : 18414\n"
      ]
     }
    ],
@@ -146,7 +152,7 @@
     "import pandas as pd\n",
     "import glob\n",
     "import yaml\n",
-    "all_files = glob.glob('C:/Users/bened/Desktop/Uni/repos/xdbc-client/experiments/model_optimizer/random_samples_10_5M/S*.csv')\n",
+    "all_files = glob.glob('C:/Users/bened/Desktop/Uni/repos/xdbc-client/experiments/model_optimizer/random_samples_10_5M_semi_flex/S*.csv')\n",
     "total_count = 0\n",
     "for file in all_files:\n",
     "    df = pd.read_csv(file)   \n",
@@ -154,7 +160,8 @@
     "    #count = len(df[df['transfer_id']>0])\n",
     "    total_count = total_count + count\n",
     "    print(f\"{file.split('\\\\')[-1].split(\".\")[0]} : {count}\")\n",
-    "print(\"\\nTotal Random Sample Count : \"+str(total_count))"
+    "print(\"\\nTotal Random Sample Count : \"+str(total_count))\n",
+    "# 13.500"
    ]
   },
   {
@@ -184,6 +191,107 @@
     "        print(\"\\n\")\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1674,
+   "id": "d2b014df-27ac-40e2-9813-2f52ce35ccd5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Total Random Sample Count : 40276\n",
+      "\n",
+      "Total Old Sample Count : 47187\n",
+      "\n",
+      "Total Transfer Count Opt Runs: 55884\n",
+      "\n",
+      "Total Transfers executed: 143347\n",
+      "Total Terabytes's transferred: 1105.21\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import glob\n",
+    "import yaml\n",
+    "all_files = glob.glob('C:/Users/bened/Desktop/Uni/repos/xdbc-client/experiments/model_optimizer/random_samples_*/S*.csv')\n",
+    "total_count_random_samples = 0\n",
+    "for file in all_files:\n",
+    "    df = pd.read_csv(file)   \n",
+    "    count = len(df[df['time'].notna()])\n",
+    "    total_count_random_samples = total_count_random_samples + count\n",
+    "print(\"\\nTotal Random Sample Count : \"+str(total_count_random_samples))\n",
+    "\n",
+    "\n",
+    "all_files = glob.glob('C:/Users/bened/Desktop/Uni/repos/xdbc-client/experiments/model_optimizer/old_results/*.csv')\n",
+    "all_files_1 = glob.glob('C:/Users/bened/Desktop/Uni/repos/xdbc-client/experiments/model_optimizer/old_results/*/*.csv')\n",
+    "all_files_2 = glob.glob('C:/Users/bened/Desktop/Uni/repos/xdbc-client/experiments/model_optimizer/old_results/*/*/*.csv')\n",
+    "all_files_3 = glob.glob('C:/Users/bened/Desktop/Uni/repos/xdbc-client/experiments/model_optimizer/old_results/*/*/*/*.csv')\n",
+    "all_files_4 = glob.glob('C:/Users/bened/Desktop/Uni/repos/xdbc-client/experiments/model_optimizer/old_results/*/*/*/*/*.csv')\n",
+    "all_files_5 = glob.glob('C:/Users/bened/Desktop/Uni/repos/xdbc-client/experiments/model_optimizer/old_results/*/*/*/*/*/*.csv')\n",
+    "\n",
+    "total_count_old = 0\n",
+    "for file in all_files:\n",
+    "    df = pd.read_csv(file)   \n",
+    "    count = len(df[df['time'].notna()])\n",
+    "    total_count_old = total_count_old + count\n",
+    "    \n",
+    "for file in all_files_1:\n",
+    "    df = pd.read_csv(file)   \n",
+    "    count = len(df[df['time'].notna()])\n",
+    "    total_count_old = total_count_old + count\n",
+    "    \n",
+    "for file in all_files_2:\n",
+    "    df = pd.read_csv(file)   \n",
+    "    count = len(df)\n",
+    "    total_count_old = total_count_old + count\n",
+    "\n",
+    "for file in all_files_3:\n",
+    "    df = pd.read_csv(file)   \n",
+    "    count = len(df)\n",
+    "    total_count_old = total_count_old + count\n",
+    "\n",
+    "for file in all_files_4:\n",
+    "    df = pd.read_csv(file)   \n",
+    "    count = len(df)\n",
+    "    total_count_old = total_count_old + count\n",
+    "\n",
+    "for file in all_files_5:\n",
+    "    df = pd.read_csv(file)   \n",
+    "    count = len(df)\n",
+    "    total_count_old = total_count_old + count\n",
+    "\n",
+    "print(\"\\nTotal Old Sample Count : \"+str(total_count_old))\n",
+    "\n",
+    "all_files = glob.glob('C:/Users/bened/Desktop/Uni/repos/xdbc-client/experiments/model_optimizer/results_*/*/*/*.csv')\n",
+    "total_count = 0\n",
+    "dict_count_per_env = dict();\n",
+    "for file in all_files:\n",
+    "    df = pd.read_csv(file)\n",
+    "    count = len(df[df['transfer_id'] > 0])\n",
+    "    total_count = total_count + count\n",
+    "    \n",
+    "\n",
+    "\n",
+    "print(\"\\nTotal Transfer Count Opt Runs: \"+str(total_count))\n",
+    "\n",
+    "print(\"\\nTotal Transfers executed: \"+str(total_count + total_count_random_samples  + total_count_old))\n",
+    "\n",
+    "#print(\"\\nTotal GB's transfered: \"+str((total_count + total_count_random_samples + total_count_old)*7.71))\n",
+    "print(\"Total Terabytes's transferred: \"+str(round(((total_count + total_count_random_samples + total_count_old)*7.71)/1000,2)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cc00df25-4eeb-427c-99a8-b04370ca0196",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
