--- a/experiments/model_optimizer/notebooks/list_results_files.ipynb
+++ b/experiments/model_optimizer/notebooks/list_results_files.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1734,
+   "execution_count": 145,
    "id": "81ad327b-bd53-4f26-aa28-eed08b9e2e9d",
    "metadata": {},
    "outputs": [
@@ -11,35 +11,35 @@
      "output_type": "stream",
      "text": [
       "S16_C16_N1000:\n",
-      "  cost_model_xgb_rs_exc_cluster_update_only_hist_v26: '2x; '\n",
+      "  cost_model_xgb_rs_exc_cluster_update_only_hist_v27: '25x; 25x; 25x; '\n",
       "S16_C4_N1000:\n",
-      "  cost_model_xgb_rs_exc_cluster_update_only_hist_v26: '21x; 20x; 20x; '\n",
+      "  cost_model_xgb_rs_exc_cluster_update_only_hist_v27: '24x; 25x; 25x; '\n",
       "S16_C8_N1000:\n",
-      "  cost_model_xgb_rs_exc_cluster_update_only_hist_v26: '2x; 2x; 2x; '\n",
+      "  cost_model_xgb_rs_exc_cluster_update_only_hist_v27: '25x; 25x; 25x; '\n",
       "S2_C2_N50:\n",
-      "  cost_model_xgb_rs_exc_cluster_update_only_hist_v26: '13x; 13x; 12x; '\n",
+      "  cost_model_xgb_rs_exc_cluster_update_only_hist_v27: '24x; 25x; 24x; '\n",
       "S2_C8_N50:\n",
-      "  cost_model_xgb_rs_exc_cluster_update_only_hist_v26: '12x; 13x; 11x; '\n",
+      "  cost_model_xgb_rs_exc_cluster_update_only_hist_v27: '24x; 23x; 0x; '\n",
       "S4_C16_N50:\n",
-      "  cost_model_xgb_rs_exc_cluster_update_only_hist_v26: '18x; 18x; 16x; '\n",
+      "  cost_model_xgb_rs_exc_cluster_update_only_hist_v27: '25x; 25x; 25x; '\n",
       "S8_C16_N150:\n",
-      "  cost_model_xgb_rs_exc_cluster_update_only_hist_v26: '25x; 25x; 2x; '\n",
+      "  cost_model_xgb_rs_exc_cluster_update_only_hist_v27: '25x; 25x; 25x; '\n",
       "S8_C2_N150:\n",
-      "  cost_model_xgb_rs_exc_cluster_update_only_hist_v26: '14x; 13x; 13x; '\n",
+      "  cost_model_xgb_rs_exc_cluster_update_only_hist_v27: '25x; 24x; 25x; '\n",
       "S8_C8_N150:\n",
-      "  cost_model_xgb_rs_exc_cluster_update_only_hist_v26: '25x; 25x; 25x; '\n",
+      "  cost_model_xgb_rs_exc_cluster_update_only_hist_v27: '25x; 25x; 25x; '\n",
       "\n",
-      "S16_C16_N1000: 2\n",
-      "S16_C4_N1000: 61\n",
-      "S16_C8_N1000: 6\n",
-      "S2_C2_N50: 38\n",
-      "S2_C8_N50: 36\n",
-      "S4_C16_N50: 52\n",
-      "S8_C16_N150: 52\n",
-      "S8_C2_N150: 40\n",
+      "S16_C16_N1000: 75\n",
+      "S16_C4_N1000: 74\n",
+      "S16_C8_N1000: 75\n",
+      "S2_C2_N50: 73\n",
+      "S2_C8_N50: 47\n",
+      "S4_C16_N50: 75\n",
+      "S8_C16_N150: 75\n",
+      "S8_C2_N150: 74\n",
       "S8_C8_N150: 75\n",
       "\n",
-      "Total Transfer Count : 362\n"
+      "Total Transfer Count : 643\n"
      ]
     }
    ],
@@ -49,7 +49,7 @@
     "import yaml\n",
     "\n",
     "\n",
-    "all_files = glob.glob('C:/Users/bened/Desktop/Uni/repos/xdbc-client/experiments/model_optimizer/results_10_5M_semi_flex/*/*v26*/*.csv')\n",
+    "all_files = glob.glob('C:/Users/bened/Desktop/Uni/repos/xdbc-client/experiments/model_optimizer/results_10_5M_semi_flex/*/*v27*/*.csv')\n",
     "\n",
     "\n",
     "algos_to_view = [\n",
@@ -108,43 +108,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1200,
+   "execution_count": 134,
    "id": "bd1d8ec2-8a88-4554-953a-2febdd41ecaa",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "S16_C16_N1000_random_samples : 600\n",
-      "S16_C16_N150_random_samples : 700\n",
-      "S16_C16_N50_random_samples : 700\n",
-      "S16_C4_N1000_random_samples : 600\n",
-      "S16_C4_N150_random_samples : 700\n",
-      "S16_C4_N50_random_samples : 700\n",
-      "S16_C8_N1000_random_samples : 600\n",
-      "S16_C8_N150_random_samples : 700\n",
-      "S16_C8_N50_random_samples : 700\n",
-      "S2_C2_N1000_random_samples : 700\n",
-      "S2_C2_N150_random_samples : 700\n",
-      "S2_C2_N50_random_samples : 700\n",
-      "S2_C8_N1000_random_samples : 699\n",
-      "S2_C8_N150_random_samples : 700\n",
-      "S2_C8_N50_random_samples : 700\n",
-      "S4_C16_N1000_random_samples : 700\n",
-      "S4_C16_N150_random_samples : 700\n",
-      "S4_C16_N50_random_samples : 700\n",
-      "S8_C16_N1000_random_samples : 600\n",
-      "S8_C16_N150_random_samples : 700\n",
-      "S8_C16_N50_random_samples : 700\n",
-      "S8_C2_N1000_random_samples : 615\n",
-      "S8_C2_N150_random_samples : 700\n",
-      "S8_C2_N50_random_samples : 700\n",
-      "S8_C8_N1000_random_samples : 700\n",
-      "S8_C8_N150_random_samples : 700\n",
-      "S8_C8_N50_random_samples : 700\n",
-      "\n",
-      "Total Random Sample Count : 18414\n"
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (1138226511.py, line 11)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Cell \u001b[1;32mIn[134], line 11\u001b[1;36m\u001b[0m\n\u001b[1;33m    print(f\"{file.split('\\\\')[-1].split(\".\")[0]} : {count}\")\u001b[0m\n\u001b[1;37m                                          ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
@@ -310,7 +283,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.8.20"
   }
  },
  "nbformat": 4,
