--- a/experiments/model_optimizer/notebooks/list_results_files.ipynb
+++ b/experiments/model_optimizer/notebooks/list_results_files.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 277,
    "id": "81ad327b-bd53-4f26-aa28-eed08b9e2e9d",
    "metadata": {},
    "outputs": [
@@ -11,35 +11,35 @@
      "output_type": "stream",
      "text": [
       "S16_C16_N1000:\n",
-      "  cost_model_xgb_rs_exc_cluster_update_only_hist_v27: '25x; 25x; 25x; '\n",
+      "  cost_model_xgb_rs_exc_cluster_update_only_hist_v31: '1x; 1x; '\n",
       "S16_C4_N1000:\n",
-      "  cost_model_xgb_rs_exc_cluster_update_only_hist_v27: '24x; 25x; 25x; '\n",
+      "  cost_model_xgb_rs_exc_cluster_update_only_hist_v31: '17x; 17x; 17x; '\n",
       "S16_C8_N1000:\n",
-      "  cost_model_xgb_rs_exc_cluster_update_only_hist_v27: '25x; 25x; 25x; '\n",
+      "  cost_model_xgb_rs_exc_cluster_update_only_hist_v31: '2x; 1x; 1x; '\n",
       "S2_C2_N50:\n",
-      "  cost_model_xgb_rs_exc_cluster_update_only_hist_v27: '24x; 25x; 24x; '\n",
+      "  cost_model_xgb_rs_exc_cluster_update_only_hist_v31: '14x; 12x; 11x; '\n",
       "S2_C8_N50:\n",
-      "  cost_model_xgb_rs_exc_cluster_update_only_hist_v27: '24x; 23x; 0x; '\n",
+      "  cost_model_xgb_rs_exc_cluster_update_only_hist_v31: '6x; 15x; 0x; '\n",
       "S4_C16_N50:\n",
-      "  cost_model_xgb_rs_exc_cluster_update_only_hist_v27: '25x; 25x; 25x; '\n",
+      "  cost_model_xgb_rs_exc_cluster_update_only_hist_v31: '18x; 18x; 15x; '\n",
       "S8_C16_N150:\n",
-      "  cost_model_xgb_rs_exc_cluster_update_only_hist_v27: '25x; 25x; 25x; '\n",
+      "  cost_model_xgb_rs_exc_cluster_update_only_hist_v31: '25x; 25x; 25x; '\n",
       "S8_C2_N150:\n",
-      "  cost_model_xgb_rs_exc_cluster_update_only_hist_v27: '25x; 24x; 25x; '\n",
+      "  cost_model_xgb_rs_exc_cluster_update_only_hist_v31: '13x; 12x; 13x; '\n",
       "S8_C8_N150:\n",
-      "  cost_model_xgb_rs_exc_cluster_update_only_hist_v27: '25x; 25x; 25x; '\n",
+      "  cost_model_xgb_rs_exc_cluster_update_only_hist_v31: '25x; 25x; 25x; '\n",
       "\n",
-      "S16_C16_N1000: 75\n",
-      "S16_C4_N1000: 74\n",
-      "S16_C8_N1000: 75\n",
-      "S2_C2_N50: 73\n",
-      "S2_C8_N50: 47\n",
-      "S4_C16_N50: 75\n",
+      "S16_C16_N1000: 2\n",
+      "S16_C4_N1000: 51\n",
+      "S16_C8_N1000: 4\n",
+      "S2_C2_N50: 37\n",
+      "S2_C8_N50: 21\n",
+      "S4_C16_N50: 51\n",
       "S8_C16_N150: 75\n",
-      "S8_C2_N150: 74\n",
+      "S8_C2_N150: 38\n",
       "S8_C8_N150: 75\n",
       "\n",
-      "Total Transfer Count : 643\n"
+      "Total Transfer Count : 354\n"
      ]
     }
    ],
@@ -49,7 +49,7 @@
     "import yaml\n",
     "\n",
     "\n",
-    "all_files = glob.glob('C:/Users/bened/Desktop/Uni/repos/xdbc-client/experiments/model_optimizer/results_10_5M_semi_flex/*/*v27*/*.csv')\n",
+    "all_files = glob.glob('C:/Users/bened/Desktop/Uni/repos/xdbc-client/experiments/model_optimizer/results_10_5M_semi_flex/*/*v31*/*.csv')\n",
     "\n",
     "\n",
     "algos_to_view = [\n",
@@ -99,6 +99,7 @@
     "    dict_overview[env][algo] = dict_overview[env][algo] + \"\" + str(count)+\"x; \"\n",
     "    dict_count_per_env[env] = dict_count_per_env[env] + count\n",
     "\n",
+    "\n",
     "print(yaml.dump(dict_overview))\n",
     "\n",
     "print(yaml.dump(dict_count_per_env))\n",
@@ -108,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 275,
    "id": "bd1d8ec2-8a88-4554-953a-2febdd41ecaa",
    "metadata": {},
    "outputs": [
@@ -117,7 +118,7 @@
      "evalue": "invalid syntax (1138226511.py, line 11)",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;36m  Cell \u001b[1;32mIn[134], line 11\u001b[1;36m\u001b[0m\n\u001b[1;33m    print(f\"{file.split('\\\\')[-1].split(\".\")[0]} : {count}\")\u001b[0m\n\u001b[1;37m                                          ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+      "\u001b[1;36m  Cell \u001b[1;32mIn[275], line 11\u001b[1;36m\u001b[0m\n\u001b[1;33m    print(f\"{file.split('\\\\')[-1].split(\".\")[0]} : {count}\")\u001b[0m\n\u001b[1;37m                                          ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
